@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3090 2003/08/24 05:02:23 taca Exp $
+$NetBSD: CHANGES,v 1.3091 2003/08/24 15:53:47 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3323,3 +3323,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated mysql-client to 3.23.49nb4 [taca 2003-08-24]
 	Updated mysql-server to 3.23.49nb4 [taca 2003-08-24]
 	Updated ruby-tcpwrap to 0.6 [taca 2003-08-24]
+	Updated vmware-module3 to 3.2.1.3 [jdolecek 2003-08-24]
